[SVN] r1745 www.twisterrob.net in /Web/www.twisterrob.net/ [FIX] Lateral navigation layout issue on mobile [ADD] Customized lateral navigation for blog and jobs

--- a/_sass/_09_elements.scss
+++ b/_sass/_09_elements.scss
@@ -101,14 +101,18 @@ ul#markdown-toc {
 /* Button
 ------------------------------------------------------------------- */
 
-button, .button         { letter-spacing: 1px; }
-  button.grey, .button.grey { background: $grey-10; }
-  button.grey:hover,
-  button.grey:focus,
-  .button.grey:hover,
-  .button.grey:focus      { background-color: $grey-16; }
-
-
+button, .button {
+  letter-spacing: 1px;
+  &.grey {
+    background: $grey-10;
+    &:hover, &:focus {
+      background-color: $grey-16;
+    }
+  }
+  &.prev, &.next {
+    width: 100%;
+  }
+}
 
 /* Side-Nav
 ------------------------------------------------------------------- */
